# pc-benchmark

./: CMakeLists.txt  CPUbenchmark.cpp  CPUbenchmark.h  GPUbenchmark.cpp  GPUbenchmark.h  Main.cpp  RAMbenchmark.cpp  RAMbenchmark.h  README.md  SCSPROJECT.vcxproj  SCSPROJECT.vcxproj.filters  StorageBenchmark.cpp  StorageBenchmark.h  SystemInfo.cpp  SystemInfo.h  Timer.cpp  Timer.h
include/: opencl.hpp
python_ui/: PC_Benchmark.spec  SCS_Benchmark.spec  backend_manager.py  config.py  main.py  scoring_engine.py  ui_components.py
